# julie

./: .gitignore  Makefile  README.md  install.sh  pnpm-workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs  pyproject_minimal.toml  python_env.rs  runner.rs
apps/web/: index.html  package.json
apps/web/src/: App.tsx  main.tsx  package.json  vite.config.ts
apps/web/src/api/: client.ts
apps/web/src/editor/: PyodidePanel.tsx
python/: pyproject.toml
python/src/your_app/: main.py
python/tests/: test_agent_tasks.py  test_smoke.py
scripts/: bootstrap.sh
server/: package.json
server/src/: index.ts
