[project]
name = "your-app"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff==0.*",
  "pytest==8.*",
  "coverage==7.*",
  "basedpyright==1.*",
  "mypy==1.*"
]

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP","B","SIM","W","PL","RUF"]
format.quote-style = "single"

[tool.mypy]
python_version = "3.11"
strict = false